Add admin tenant project and user management
